--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,5 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'http://localhost:8089/'
 VUE_APP_BASE_API_PRO = 'http://localhost:8089/'
